<resources>
    <string name="app_name">Blood Glucose Monitor</string>
    <string name="fasting">Fasting:</string>
    <string name="breakfast">Breakfast:</string>
    <string name="lunch">Lunch:</string>
    <string name="dinner">Dinner:</string>
    <string name="notes">Notes:</string>
    <string name="normal">Normal</string>
    <string name="concentration">mg/dL</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="deleteButton">delete</string>
    <string name="date_picker_title">Choose Date</string>
    <string name="new_sugar">New Entry</string>
    <string name="delete_sugar">Delete entry</string>
    <string name="cloud_data">Cloud data</string>
</resources>
